app/pipeline/eventlistener-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app.kubernetes.io/instance: acs-config-pipeline-app
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener-acs-policies
  name: el-event-listener-acs-policies
  namespace: stackrox
spec:
  host: el-event-listener-acs-policies-stackrox.apps.cluster-gknd7.gknd7.sandbox2474.opentlc.com
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-event-listener-acs-policies
    weight: 100
  wildcardPolicy: None
